<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, BlindFireActivity!</string>
    <string name="app_name">BlindFire</string>
    <string name="inline_preferences">this</string>
    <string name="title_toggle_preference">that</string>
    <string name="summary_toggle_preference">the</string>
    <string name="dialog_based_preferences">other</string>
    <string name="dialog_title_edittext_preference">thing</string>
    <string name="title_edittext_preference">or </string>
    <string name="summary_list_preference">else</string>
    <string name="title_list_preference">could</string>
    <string name="dialog_title_list_preference">be</string>
    
    <string name="trash_desc">delete picture</string>
    <string name="go_to_camera_desc">go to camera</string>
    <string name="prev_desc">previous picture</string>
    <string name="picture_desc">picture</string>
    <string name="next_desc">next picture</string>
    <string name="play_desc">play description</string>
    <string name="record_desc">record description</string>
    <string name="full_image_desc">full screen picture</string>

</resources>