<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/toplayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/trash"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/trash_desc"
            android:focusable="true"
            android:src="@drawable/ic_menu_delete" >
        </ImageButton>

        <ImageButton
            android:id="@+id/go_to_camera"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/go_to_camera_desc"
            android:focusable="true"
            android:src="@drawable/ic_menu_camera" >
        </ImageButton>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/middlelayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottomlayer"
        android:layout_below="@+id/toplayer"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/prev_image"
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/prev_desc"
            android:focusable="true"
            android:src="@drawable/ic_menu_back" >
        </ImageButton>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".8" >

            <EditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:inputType="text" >
            </EditText>

            <ImageView
                android:id="@+id/pic"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/title"
                android:contentDescription="@string/picture_desc"
                android:focusable="true" >
            </ImageView>
        </RelativeLayout>

        <ImageButton
            android:id="@+id/next_image"
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/next_desc"
            android:focusable="true"
            android:src="@drawable/ic_menu_forward" >
        </ImageButton>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomlayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <ImageButton
            android:id="@+id/record"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/record_desc"
            android:focusable="true"
            android:src="@drawable/ic_btn_speak_now" >
        </ImageButton>

        <ImageButton
            android:id="@+id/play"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/play_desc"
            android:focusable="true"
            android:src="@drawable/ic_menu_play_clip" >
        </ImageButton>
    </LinearLayout>

</RelativeLayout>